syntax = "proto3";

package proto;
option go_package = "github.com/ronexlemon/rail/micro-services/auth-service/proto";


service AuthService {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}

message AuthenticateRequest {
  string api_key = 1;
  string secret_key = 2;
}

message AuthenticateResponse {
  string business_id = 1;
  string status = 2;
  bool valid = 3;
}
